<resources>
    <string name="app_name">Stone_Scissors_Paper</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="me_game">Me:</string>
    <string name="me">Me</string>
    <string name="my_phone">My Phone</string>
    <string name="my_phone_game">My Phone:</string>
    <string name="first_score_text">%1$s</string>
    <string name="score_text">%1$s</string>
    <string name="phone_score_text">%1$s</string>
    <string name="phone_score">%1$s</string>
    <string name="play">PLAY</string>
    <string name="score_history">Score History</string>
    <string name="restart_btn_text">RESTART</string>
    <string name="scores_btn_text">SCORES</string>
    <string name="separate_scores">:</string>
    <string name="description_delete_all_button">delete all button</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="score_history_deleted">All Scores are deleted</string>
    <string name="delete_all">Delete All</string>
    <string name="question_delete_all">Do you want to delete all Scores?</string>
    <string name="score_equals">EQUALS</string>
    <string name="phone_wins">Phone Wins</string>
    <string name="you_win">You Win</string>
    <string name="win_message">Who Wins?</string>
</resources>